# tecnote

./: README.md
BuildTool/: CMake_zh_CN.md  Meson_zh_CN.md  Ninja_zh_CN.md  build.ninja  hello.c  messagebox.c
C/: C-libui_zh_CN.md  C_zh_CN.md  Gdb_zh_CN.md  MinGW_zh_CN.md  inputrc
CMake/: CMakeLists.txt  CMake_zh_CN.md
Cloud/: AWS_zh_CN.md
Container/: Docker-Compose_zh_CN.md  Docker-Development_zh_CN.md  Docker-Dotnet_zh_CN.md  Docker-Go_zh_CN.md  Docker-Image_Container_zh_CN.md  Docker-Java_zh_CN.md  Docker-Nodejs_zh_CN.md  Docker-Python_zh_CN.md  Docker-Rust_zh_CN.md  Docker-Vue_zh_CN.md  Docker_zh_CN.md
DB/: DB_zh_CN.md  DBeaver_zh_CN.md  Gobang_zh_CN.md  MongoDB_zh_CN.md  OpenSearch_zh_CN.md  Postgresql_zh_CN.md  Redis_zh_CN.md  Sqlite3_zh_CN.md
DevTool/: .gvimrc  .vimrc  CodeBlocks_zh_CN.md  Eclipse_zh_CN.md  Gvim_zh_CN.md  Helix_zh_CN.md  KEYBOARD.CNF  NeoVim-lua-guide_zh_CN.md  NeoVim_zh_CN.md  TERATERM.INI  Teraterm_zh_CN.md  Terminal_Compare_zh_CN.md  Tmux_zh_CN.md  VSCode-Drawio_zh_CN.md  VSCode-custom-highlight_zh_CN.md  VSCode-ssh_zh_CN.md  VSCode_zh_CN.md  Vim-ctags_zh_CN.md  Vim-dap_zh_CN.md  Vim-env_zh_CN.md  Vim-im-select_zh_CN.md  Vim-lsp_zh_CN.md  Vim-netrw_zh_CN.md  Vim-vimrc_zh_CN.md  Vim_termdebug_zh_CN.md  Vim_zh_CN.md  WinSCP_zh_CN.md  Windows-Terminal_zh_CN.md  apc.vim  c_cpp_properties.json-project  configure.ctags  httpYac.http  keybindings.json-user  lchenv.ttl  lchvimrc  settings.json-project  settings.json-user  tmux2.7.conf  tmux3.2.conf  user@192.168.0.3-8122-bashrc.ttl  (+6 more)
Distributed/: DTM_zh_CN.md  Etcd_zh_CN.md.md  Fluent_Bit_zh_CN.md  Kubernetes_zh_CN.md  MicroService_zh_CN.md  OpenTelemetry_zh_CN.md  Redis_zh_CN.md
Dotnet/: ASP.NET_zh_CN.md  AsyncExample.cs  Dotnet_zh_CN.md
Framework/: Backend_Dotnet_Webapi_zh_CN.md  Backend_Golang_Gin_zh_CN.md  Backend_Node_Fastify_zh_CN.md  Backend_Python_Sanic_zh_CN.md  Backend_Rust_ActixWeb_zh_CN.md  Frontend_Backend_Separation_zh_CN.md
Framework/BackendSanic/: .env  pyproject.toml
Framework/BackendSanic/shell/: app_dockerfile  docker_build.sh
Framework/BackendSanic/src/backendsanic/: auth.py  db.py  db.py_bak  init_db.py  login_blueprint.py  login_service.py  result.py  server.py  todo_blueprint.py  todo_service.py
Framework/BackendSanic/src/backendsanic/common/: result.py
Framework/BackendSanic/src/backendsanic/config/: config_dev.py  config_prd.py
Framework/BackendSanic/src/backendsanic/controller/: __init__.py  login_controller.py  todo_controller.py
Framework/BackendSanic/src/backendsanic/db/: db.py
Framework/BackendSanic/src/backendsanic/jwt/: auth.py
Framework/BackendSanic/src/backendsanic/service/: login_service.py  todo_service.py
Framework/backend-actix-web/: Cargo.toml
Framework/backend-actix-web/shell/: app_dockerfile  config.toml  docker_build.sh
Framework/backend-actix-web/src/: main.rs  middleware.rs
Framework/backend-actix-web/src/bootstrap/: db.rs  mod.rs
Framework/backend-actix-web/src/common_response/: common_result.rs  mod.rs
Framework/backend-actix-web/src/controller/: login_controller.rs  mod.rs  todo_controller.rs
Framework/backend-actix-web/src/middleware/: auth.rs  jwt_util.rs  mod.rs
Framework/backend-actix-web/src/utils/: db.rs  log.rs  result.rs
Framework/backend-axum/: Cargo.toml
Framework/backend-axum/.cargo/: config.toml
Framework/backend-axum/shell/: app_dockerfile  docker_build.sh
Framework/backend-axum/src/: controller.rs  main.rs  utils.rs
Framework/backend-axum/src/controller/: login_controller.rs  todo_controller.rs
Framework/backend-axum/src/middleware/: auth.rs
Framework/backend-axum/src/utils/: result.rs
Git/: .bash_profile  .bashrc-personal  .gitconfig  .gitignore_sample  .minttyrc  ConstructGitServer_zh_CN.md  Git-bash_zh_CN.md  Git-difftool_zh_CN.md  Git-pacman_zh_CN.md  Git_CICD.md  Git_zh_CN.md  Gitea_zh_CN.md  Github-UsbEAmHostsEditor_zh_CN.md  git-bash-light.cmd  minttyrc-dark  minttyrc-light  mirrorlist.mingw32  mirrorlist.mingw64  mirrorlist.msys
Go/: Go-Gin_zh_CN.md  Go_zh_CN.md  Grpc_Resolver_zh_CN.md  Grpc_zh_CN.md
Go/Grpc/python/: buf.gen.yaml  client.py  pyproject.toml  server.py
Go/Grpc/python/shell/: app_dockerfile  docker_build.sh
Go/Grpc/python/src/: client.py  server.py
Go/Grpc/python/src/log/: log.py
Go/Grpc/python/src/service/: product_service.py
Go/Grpc/python/src/stub/: __init__.py
Go/Grpc/rust/: Cargo.toml  build.rs
Go/Grpc/rust/shell/: app_dockerfile  docker_build.sh
Go/Grpc/rust/src/: client.rs  server.rs  services.rs  utils.rs
Go/Grpc/rust/src/services/: product_service.rs
Go/Grpc/rust/src/utils/: log.rs
Java/: AsyncExample.java  Java-Gradle_zh_CN.md  Java-Jmeter_zh_CN.md  Java-Maven_zh_CN.md  Java-Spring_zh_CN.md  Java_zh_CN.md  Kotlin_zh_CN.md
Linux/: InstallLinuxMint_zh_CN.md  Linux-adduser_zh_CN.md  Linux-customize_zh_CN.md  Linux-env_zh_CN.md  Linux-welcom-page_zh_CN.md  Linux_zh_CN.md  Ssh-config_zh_CN.md  Terminal-color_zh_CN.md  config  install_linux_vim_setting.sh  lazy_nvim_setting.sh
MacOS/: MacOS_zh_CN.md
Meson/: Meson_zh_CN.md
Ninja/: build.ninja  (+1 more)
Python/PoetryTest/: config.dev.ini  config.docker.ini  config.prd.ini  pyproject.toml
Python/PoetryTest/shell/: app_dockerfile  docker_build.sh
Python/PoetryTest/src/poetrytest/: app.py  etcd_client_example.py  redis_client_example.py
Python/PoetryTest/src/poetrytest/config/: config.py
Python/PoetryTest/src/poetrytest/log/: log.py
Python/PoetryTest/src/poetrytest/mail/: mail.py
Python/PoetryTest/src/poetrytest/sub_module/: etcd_client_example.py  redis_client_example.py  sub_mod1.py  sub_mod2.py
Python/PoetryTest/tests/: test_app.py
Rust/rust_sample/: Cargo.toml  config.dev.toml  config.prd.toml  config.toml
Rust/rust_sample/shell/: app_dockerfile  docker_build.sh
Rust/rust_sample/src/: etcd_client_example.rs  main.rs  postgre.rs  postgre_client_example.rs  redis_client_example.rs  sub.rs  utils.rs
Rust/rust_sample/src/postgre/: employee_entity.rs  postgre_base.rs  postgre_sea_orm.rs
Rust/rust_sample/src/sub/: calc.rs
Rust/rust_sample/src/utils/: config.rs  log.rs
(+895 files in other folders)
