[tool.poetry]
name = "backendsanic"
version = "1.0.0"
description = ""
authors = ["yourname <yourname@example.com>"]
readme = "README.md"
packages = [{ include = "backendsanic", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^23.6.0"
sanic-ext = "^23.6.0"
pyjwt = "^2.8.0"
setuptools = "^70.0.0"
sanic-cors = "^2.2.0"
pydblite = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
#name = "tsinghua"
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.pyright]
venvPath = "."
venv = ".venv"
