[package]
name = "backend-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
lazy_static = "1.4.0"
chrono = "0.4"
futures-util = "0.3"
