[package]
name = "backend-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono"] }
rusqlite = { version = "0.32", features = ["bundled"] }
lazy_static = "1.5"
chrono = "0.4"
