[tool.poetry]
name = "python-gprc"
version = "1.0.0"
description = ""
authors = ["yourname <yourname@example.com>"]
readme = "README.md"
packages = [
  {include = "src"},
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.66.1"
protobuf = "^5.28.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
#指定一个执行环境，其中src是根路径。pyright将在执行时将该路径加到sys.path。
executionEnvironments = [
  { root = "src" }
]
