[package]
name = "rust_grpc"
version = "0.1.0"
edition = "2021"

[[bin]] # 用来运行 gRPC 服务器的可执行文件
name = "rustserver"
path = "src/server.rs"

[[bin]] # 用来运行 gRPC 客户端的可执行文件
name = "rustclient"
path = "src/client.rs"

[dependencies]
tonic = "0.12.2"
prost = "0.13.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "json"] }

[build-dependencies]
tonic-build = "0.12.2"
